@@ -4,6 +4,7 @@ import java.text.MessageFormat;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
@@ -112,7 +113,7 @@ public class ChatbotUseCase implements BotUseCase {
         final ModelSettings modelSettings = eventData.getChannelConfig().getSettings().getModelSettings();
         final MessageChannelUnion channel = eventData.getChannel();
         final SelfUser bot = eventData.getBot();
-        return channel.getHistory()
+        List<String> messages = channel.getHistory()
                 .retrievePast(modelSettings.getChatHistoryMemory()).complete()
                 .stream()
                 .filter(m -> !m.getContentRaw().trim().equals(bot.getAsMention().trim()))
@@ -124,8 +125,10 @@ public class ChatbotUseCase implements BotUseCase {
                                 mAuthorUser.getName(), m.getContentDisplay().trim()));
                 })
                 .takeWhile(m -> !m.equals(STOP_MEMORY_FLAG))
-                .sorted(Collections.reverseOrder())
-                .toList();
+                .collect(Collectors.toList());
+
+        Collections.reverse(messages);
+        return messages;
     }
 
     private String checkForContextCap(List<MessageReaction> reactions) {
